2022-11-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Refactor handling of FreeEuro font for PDF device.

	* font/devpdf/Foundry.in: Drop "EURO" entry from file.
	* font/devpdf/devpdf.am (font/devpdf/download): Add it here.
	* font/devpdf/util/BuildFoundries.pl: Add list `base35Fonts` to
	store the groff font names of the PostScript Level 2 base fonts.
	(LoadFoundry): ...so that we copy their descriptions (and _only_
	these) from the `ps` device's font description directory.
	* doc/doc.am (doc/groff-man-pages.pdf): Declare dependency on
	"freeeuro.pfa" file in `pdf` device's font description
	directory.

2022-11-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am: Refactor.
	(MOSTLYCLEANFILES): Populate macro incrementally, adjacent to
	the targets that build the files to be cleaned.  This will
	enable cleaner refactoring in the future.
	(DEFAULT_BASE35_FONTS): Add new macro storing the targets of the
	PostScript Level 2 standard base 35 font descriptions.
	(devpdffont_DATA): Populate using `DEFAULT_BASE35_FONTS`.
	(URW_BASE35_FONTS): Add new macro, empty if [!HAVE_URW_FONTS];
	and [HAVE_URW_FONTS] otherwise naming the `U` foundry font
	description counterparts of the `DEFAULT_BASE35_FONTS`.
	(devpdffont_DATA): Append `URW_BASE35_FONTS`.
	($(DEFAULT_BASE35_FONTS) $(URW_BASE35_FONTS)): Assert dependency
	on "font/devpdf/download".  This isn't literally true, but
	BuildFoundries generates all of these together, so if the
	"font/devpdf/download" target rule runs successfully, the font
	description files named in these macro expansions will be
	generated too.

2022-11-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Do more explicit work and less magic for PDF fonts.

	* font/devpdf/devpdf.am (devpdffont_DATA): Add all of the
	PostScript Level 2 base 35 font descriptions (from the default
	foundry).  Also add the "EURO" font description file and the