@@ -166,6 +166,7 @@ tmac_TESTS = \
   tmac/tests/an_TS-adds-no-vertical-space.sh \
   tmac/tests/an_TS-do-not-keep-tables-when-cR-set.sh \
   tmac/tests/an_X-register-works.sh \
+  tmac/tests/an_adjust-link-text-correctly.sh \
   tmac/tests/an_avoid-two-font-denial-of-service.sh \
   tmac/tests/an_do-not-abbreviate-escape-using-TH-arguments.sh \
   tmac/tests/an_font-remapping-does-not-affect-titles.sh \
